--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moises Tarifa - Portfolio</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
-</html>
-<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
+    <title>Moises Tarifa - Portfolio</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moises Tarifa</title>
+    <meta name="author" content="Moises Tarifa" />
+    <meta
+      name="keywords"
+      content="developer, react, frontend, js, css, framework"
+    />
+    <meta
+      name="description"
+      content="Welcome to my portfolio of personal projects. I´m a front-end developer with experience in React and other web technologies. On this site, you will find
+a selection of my most highlighted projects, as well as information about my experience and skills. if you interested in hiring my services or just want to know more about me, do no hesitate to contact me"
+    />
+    <meta property="og:title" content="Moises Tarifa - Portfolio" />
+    <meta
+      property="og:description"
+      content="Welcome to my portfolio of personal projects. I´m a front-end developer with experience in React and other web technologies. On this site, you will find
+a selection of my most highlighted projects, as well as information about my experience and skills. if you interested in hiring my services or just want to know more about me, do no hesitate to contact me"
+    />
+    <meta property="og:url" content="https://paul1-7.github.io/portfolio/" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/paul1-7/image/upload/v1672597016/portfolio/img-content_oegnbp.jpg"
+    />
     <link rel="stylesheet" href="/src/index.css" />
+    <script type="module" src="/main.js"></script>
   </head>
   <body class="font-poppins dark:bg-dark dark:text-white" id="app">
     <header
       class="flex fixed w-full z-50 top-0 justify-between items-center bg-light px-8 py-2 border-b-black/20 border-b-[1px] md:px-10 lg:py-3 dark:bg-dark/70 dark:border-b-white/20"
     >
-      <img id="logo" src="assets/svg/logo.svg" class="h-10" loading="lazy" />
+      <img
+        id="logo"
+        src="assets/svg/logo.svg"
+        class="h-10"
+        loading="lazy"
+        alt="logo"
+      />
       <div class="flex sm:flex-row-reverse">
         <img
           id="btn-dark"
@@ -101,8 +116,7 @@
           class="flex flex-col justify-end items-center sm:h-full sm:basis-1/2 md:justify-center"
         >
           <h1 class="text-center text-2xl lg:text-4xl">
-            Hi, i'm <br /><span
-              class="text-5xl font-extrabold title lg:text-7xl"
+            Hi, i'm <br /><span class="text-5xl font-bold title lg:text-7xl"
               >Moises Tarifa</span
             ><br />Frontend developer
           </h1>
