--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@ a selection of my most highlighted projects, as well as information about my exp
             >
             <span
               style="
-                --content: 'Frontend developer';
+                --content: 'Web developer';
                 --bg-start: #ff4d4d;
                 --bg-end: #f9cb28;
                 --delay: 6s;
               "
               class="title"
-              >Frontend developer</span
+              >Web developer</span
             >
           </h1>
           <a
@@ -312,10 +312,10 @@ a selection of my most highlighted projects, as well as information about my exp
         </h2>
         <div class="pt-4 md:flex md:items-center md:gap-3">
           <div class="text-center md:basis-1/2 md:p-4 md:text-xl">
-            Hello, my name is Moises Tarifa and I am a front-end developer with
-            a passion for creating attractive and functional websites and
-            applications. I am a self-taught person and I am always looking for
-            new challenges and opportunities to learn and grow in my career,
+            Greetings, I am Moises Tarifa, a web developer who is passionate
+            about designing appealing and functional websites and applications.
+            Being a self-taught individual, I constantly seek new challenges and
+            opportunities to learn and grow in my career
           </div>
           <div
             class="flex justify-center pt-4 md:basis-1/2"
@@ -424,23 +424,24 @@ a selection of my most highlighted projects, as well as information about my exp
           <article
             class="shadow-md border-black/10 border-[1px] rounded-md overflow-hidden max-w-xs transition hover:scale-105 hover:shadow-lg dark:border-white/[.03] dark:bg-card-dark"
           >
-            <div class="rounded-sm">
+            <div class="rounded-sm h-[10.625rem]">
               <img
-                class="object-cover w-full"
+                class="object-cover w-full h-fill-available"
                 src="./assets/img/projects/llanta-sur.webp"
                 alt="llata sur img"
                 loading="lazy"
               />
             </div>
             <div class="p-4">
-              <h3 class="font-semibold text-lg">Llanta sur - ecommerce</h3>
+              <h3 class="font-semibold text-lg">
+                Surllantas - sales management system
+              </h3>
               <p class="pt-2 text-sm text-ellipsis">
-                This project is an online store selling car tires and also
-                includes an administrative management system. This project has
-                been developed with a template to make the development process
-                faster. It is made with React and has been optimized to be
-                responsive and work well on different devices, from cell phones
-                to desktops.
+                This is an administrative management system project that has
+                been optimized to work well on different devices, ranging from
+                cell phones to desktops. It is built with React,
+                Express,Sequelize and Postgresql technologies to ensure its
+                reliability and responsiveness.
               </p>
             </div>
             <div class="flex justify-evenly">
@@ -463,6 +464,62 @@ a selection of my most highlighted projects, as well as information about my exp
               </a>
               <a
                 href="https://llanta-sur.vercel.app/"
+                class="btn-border-gradient mb-6"
+              >
+                <div
+                  class="bg-white hover:bg-light px-4 py-2 rounded-md flex justify-between items-center dark:bg-dark dark:hover:bg-dark-mode"
+                >
+                  <img
+                    src="assets/svg/eye-alt.svg"
+                    class="icon dark:invert"
+                    alt="demo icon"
+                    srcset=""
+                    loading="lazy"
+                  />
+                  <span class="text-sm">Demo</span>
+                </div>
+              </a>
+            </div>
+          </article>
+          <article
+            class="shadow-md border-black/10 border-[1px] rounded-md overflow-hidden max-w-xs transition hover:scale-105 hover:shadow-lg dark:border-white/[.03] dark:bg-card-dark relative"
+          >
+            <div class="rounded-sm h-[10.625rem]">
+              <img
+                class="object-cover w-full h-fill-available"
+                src="./assets/img/projects/movie-search.webp"
+                alt="movie search project"
+                loading="lazy"
+              />
+            </div>
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">simple movie search</h3>
+              <p class="pt-2 text-sm text-ellipsis">
+                This is a simple movie search application built with React. It
+                uses debounce and hooks to optimize the performance, such as
+                useCallback and useMemo.
+              </p>
+            </div>
+            <div class="flex justify-evenly sm:absolute bottom-0 w-full">
+              <a
+                href="https://github.com/Paul1-7/simple-movie-search"
+                class="btn-border-gradient mb-6"
+              >
+                <div
+                  class="bg-white hover:bg-light px-4 py-2 rounded-md flex justify-between items-center dark:bg-dark dark:hover:bg-dark-mode"
+                >
+                  <img
+                    src="assets/svg/github_git_icon_145985.svg"
+                    class="icon dark:invert"
+                    alt="git icon"
+                    srcset=""
+                    loading="lazy"
+                  />
+                  <span class="text-sm">Source</span>
+                </div>
+              </a>
+              <a
+                href="https://simple-movie-search-six.vercel.app/"
                 class="btn-border-gradient mb-6"
               >
                 <div
